--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA6ECb06GHjgfRQjrOJKy6tQqScBimbFmA&libraries=places"></script>
+
+
     <title>sheTravels</title>
   </head>
   <body>
