register form styling

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     -->
 
     <!-- google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 
     <!-- google maps/places api script -->
