app title update

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAd5YqpjgL__uXevBwgPfrxxYemhoeB2UY&libraries=places"></script>
 
 
-    <title>sheTravels</title>
+    <title>SHE Travels</title>
   </head>
   <body>
     <noscript>
