--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
+    <!-- Responsive viewport tag, tells small screens that it's responsive -->
+  	<meta name="viewport" content="width=device-width, initial-scale=1">
+
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Chivo:300,700|Playfair+Display:700i" rel="stylesheet">
 
